--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Hello Gulp!</h1>
-  <p>Це сторінка для демонстрації GITHUB можливостей Gulp.</p>
+  <p>Це сторінка для демонстрації можливостей Gulp.</p>
 </body>
 </html>
